--- a/main.css
+++ b/main.css
@@ -40,15 +40,23 @@ nav #head-nav-container {
   display: flex;
   justify-content: center;
   background-color: #2980b9;
+  flex-direction: column;
+  align-items: center;
 }
 
 nav #head-nav-container span {
-  width: 5em;
-  height: 5em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  width: 4em;
+  height: 4em;
   display: flex;
   justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 0.5;
+}
+
+nav #head-nav-container h2 {
+  margin: 0;
+  margin-bottom: 1em;
+  color: #ecf0f1;
 }
 
 nav #head-nav-container span img {
@@ -136,8 +144,14 @@ nav #social-row .social-item img {
   font-size: 1.8em;
 }
 
-#landing-rest #projects-label {
+.section-header {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
   font-size: 2.3em !important;
+  color: #2980b9;
+  text-align: left !important;
+  width: 85%;
 }
 
 #landing-rest #main p {
@@ -252,4 +266,61 @@ nav #social-row .social-item img {
   margin-right: 5%;
   font-size: 1.2em;
   font-family: 'Roboto Condensed', sans-serif;
+}
+
+#interests {
+  width: 85%;
+  max-width: 1200px;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  display: flex;
+  flex-direction: column;
+}
+
+#interests h3 {
+}
+
+#interests p {
+  color: #ecf0f1;
+  font-family: 'Roboto Condensed', sans-serif;
+  margin: 0;
+  margin-bottom: 3%;
+  font-size: 1.2em;
+}
+
+#interests #skills-container {
+  display: flex;
+}
+#interests #skills-container .skill {
+  flex-grow: 1;
+  flex-basis: 0;
+  background-color: rgba(41,128,185,.3);
+  font-family: 'Open Sans', sans-serif;
+  margin: 1%;
+  margin-top: 0;
+  color: #ecf0f1;
+  color: black;
+  box-shadow: 0px 3px 15px black;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+}
+#interests #skills-container .skill:nth-child(1) {
+  margin-left: 0;
+}
+#interests #skills-container .skill:nth-child(3) {
+  margin-right: 0;
+}
+
+#interests #skills-container .skill h4 {
+  text-align: center;
+  color: #ecf0f1;
+  margin-bottom: 0.5em;
+}
+
+#interests #skills-container .skill p {
+  padding-left: 1em;
+  padding-right: 1em;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #ecf0f1;
 }
