--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url( 'res/footer_lodyas.png' ) fixed;
+  background: url( 'res/stardust.png' ) fixed;
 }
 
 * {
