--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800,500');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Passion+One:700');
 
 body {
   margin: 0;
@@ -45,8 +46,8 @@ nav #head-nav-container {
 }
 
 nav #head-nav-container span {
-  width: 4em;
-  height: 4em;
+  width: 3.5em;
+  height: 3.5em;
   display: flex;
   justify-content: center;
   margin-top: 1em;
@@ -56,7 +57,10 @@ nav #head-nav-container span {
 nav #head-nav-container h2 {
   margin: 0;
   margin-bottom: 0.5em;
+  font-family: 'Passion One', cursive;
   color: #ecf0f1;
+  font-size: 1.5em;
+  letter-spacing: 1px;
 }
 
 nav #head-nav-container span img {
