--- a/main.css
+++ b/main.css
@@ -129,7 +129,9 @@ nav #social-row .social-item img {
   color: #ecf0f1;
   width: 85%;
   max-width: 1200px;
-  margin-left: -10px;
+  /*margin-left: -10px;*/
+  margin-left: -5%;
+
 }
 
 #landing-rest #main h1 {
@@ -277,6 +279,7 @@ nav #social-row .social-item img {
   max-width: 1200px;
   margin-top: 6%;
   margin-bottom: 6%;
+  margin-left: -5%;
   display: flex;
   flex-direction: column;
 }
