--- a/main.css
+++ b/main.css
@@ -15,7 +15,6 @@ body {
 
 #landing {
   display: flex;
-  min-height: 100vh;
 }
 
 nav {
@@ -130,7 +129,7 @@ nav #social-row .social-item img {
   width: 85%;
   max-width: 1200px;
   /*margin-left: -10px;*/
-  margin-left: -5%;
+  /*margin-left: -5%;*/
 
 }
 
@@ -139,7 +138,8 @@ nav #social-row .social-item img {
   font-size: 2em;
   margin: 0;
   padding: 0;
-  margin-top: 6%;
+  margin-top: 1.5em;
+
 }
 
 #landing-rest #main h3 {
@@ -222,6 +222,8 @@ nav #social-row .social-item img {
   /*background: url("https://static.pexels.com/photos/28221/pexels-photo-28221.jpg") no-repeat center center;*/
   background-color: rgba(255,255,255,.3);
 }
+
+
 .landing-item .landing-item-photos {
   justify-content: center;
   align-items: center;
@@ -279,7 +281,7 @@ nav #social-row .social-item img {
   max-width: 1200px;
   margin-top: 6%;
   margin-bottom: 6%;
-  margin-left: -5%;
+  /*margin-left: -5%;*/
   display: flex;
   flex-direction: column;
 }
@@ -314,10 +316,10 @@ nav #social-row .social-item img {
   flex-direction: column;
 }
 #interests #skills-container .skill:nth-child(1) {
-  margin-left: 0;
+
 }
 #interests #skills-container .skill:nth-child(3) {
-  margin-right: 0;
+
 }
 
 #interests #skills-container .skill h4 {
@@ -336,6 +338,6 @@ nav #social-row .social-item img {
 #contact {
   width: 85%;
   max-width: 1200px;
-  margin-left: -5%;
+  /*margin-left: -5%;*/
   margin-bottom: 6%;
 }
