--- a/main-sm.css
+++ b/main-sm.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  height: 15%;
+  max-height: 10%;
   z-index: 5000;
 }
 
@@ -12,8 +12,7 @@ nav .col {
 }
 
 nav #social-row {
-  background-color: red;
-  opacity: 0;
+  display: none;
 }
 
 nav h3 {
